# rust-stemmers

./: Cargo.toml
src/: lib.rs
src/snowball/: among.rs  mod.rs  snowball_env.rs
src/snowball/algorithms/: arabic.rs  danish.rs  dutch.rs  english.rs  finnish.rs  french.rs  german.rs  greek.rs  hungarian.rs  italian.rs  mod.rs  norwegian.rs  portuguese.rs  romanian.rs  russian.rs  spanish.rs  swedish.rs  tamil.rs  turkish.rs
