[package]
name = "rust-stemmers"
version = "1.2.0"
authors = ["Jakob Demler <jdemler@curry-software.com>", "CurrySoftware <info@curry-software.com>"]
description = "A rust implementation of some popular snowball stemming algorithms"
repository = "https://github.com/CurrySoftware/rust-stemmers"
readme = "README.md"
keywords = ["nlp", "stemming", "information", "retrieval", "language"]
license = "MIT/BSD-3-Clause"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx", branch = "master", features = ["derive", "rc"] }
serde_derive = {git="https://github.com/mesalock-linux/serde-sgx"}
